# MerTechTask

./: .gitignore  CMakeLists.txt  README.md  main.cpp  task.cpp  task.hpp
include/: defines.hpp  lexer.hpp  task.hpp  task_handler.hpp
include/gui/: dialog.hpp  gui_task_handler.hpp  mainwindow.hpp  task_model.hpp
src/: defines.cpp  lexer.cpp  task.cpp  task_handler.cpp
src/gui/: dialog.cpp  gui_task_handler.cpp  mainwindow.cpp  mainwindow.ui  task_model.cpp
